# project-storage

./: .gitignore  README.md
application/: .editorconfig  .gitignore  App.config  App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  Settings.cs  application.csproj  application.sln  application_2t1ghhuv_wpftmp.csproj
application/Abstraction/: EntityAbstraction.cs  IAuthService.cs  IDatabaseService.cs  IEntityRepository.cs  IMailService.cs  INavigationService.cs  IParserINNService.cs  ISecurityService.cs  IStatusRepository.cs  IUserRepository.cs
application/Entities/: CompanyEntity.cs
application/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs  Settings.settings
application/Repositories/: EntityRepository.cs
application/Repository/: EntityRepository.cs  StatusRepository.cs  UserRepository.cs
application/Services/: AuthService.cs  DatabaseService.cs  MailService.cs  NavigationService .cs  ParserINNService.cs  RedisCacheService.cs  SecurityService.cs
application/Theme/: AuthAccountButton.xaml  AuthInput.xaml  Button.xaml  ConfirmInput.xaml  SendButton.xaml  SendButtonGray.xaml  SendButtonWhite.xaml
application/Utilities/: BaseViewModel.cs  BoolToVisibilityConverter.cs  ImageHelper.cs  Pages.xaml  RelayCommand.cs  RepositoryHelper.cs  RequiredAttributes.cs  (+3 more)
cdc/: CMakeLists.txt  consumer.h  main.cpp  parser.cpp  parser.h
cdc/Broker/: broker.cpp  broker.h
cdc/Drivers/: baseConnector.h
cdc/Drivers/ClickHouseDriver/: connector.cpp  connector.h
cdc/Drivers/MongoDriver/: connector.cpp  connector.h
cdc/Drivers/PostgreSQLDriver/: connector.cpp  connector.h
cdc/Drivers/SQLiteDriver/: connector.cpp  connector.h
cdc/Logger/: Logger.h
cdc/Manager/: manager.h
cdc/Network/: network.h
cdc/Parsers/: JsonParser.h
cdc/Sub/: third.h
database/: Garbage.sql  ParserTable.sql  Tables.sql  Users.sql
doc/: .$structureDataBase — копия.drawio.bkp  .$structureDataBase.drawio.bkp  .$structureDataBaseParser.drawio.bkp  schema.drawio  structureDataBase.drawio  structureDataBaseParser.drawio
mystorage_service_integration/: main.py  mongo_handler.py  postgre_handler.py
parser/: main.py
(+139 files in other folders)
